--- a/src/main/java/me/eva/buidmgui/gui/MainPage.form
+++ b/src/main/java/me/eva/buidmgui/gui/MainPage.form
@@ -100,7 +100,7 @@
           <size top="5" left="5" bottom="5" right="5"/>
         </border>
         <children>
-          <component id="33753" class="javax.swing.JLabel" binding="testLabel">
+          <component id="33753" class="javax.swing.JLabel" binding="valueLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
