--- a/src/main/java/me/eva/buidmgui/gui/ConverterPage.form
+++ b/src/main/java/me/eva/buidmgui/gui/ConverterPage.form
@@ -3,32 +3,16 @@
   <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="494" height="400"/>
+      <xy x="20" y="20" width="498" height="400"/>
     </constraints>
     <properties/>
     <border type="empty"/>
     <children>
-      <component id="a05ee" class="javax.swing.JButton" binding="browseButton">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Durchsuchen..."/>
-        </properties>
-      </component>
-      <component id="9ec8c" class="javax.swing.JLabel" binding="currentFileLabel">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="329" height="16"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="keine Datei ausgewählt"/>
-        </properties>
-      </component>
       <scrollpane id="7c0c2">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="250"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -41,6 +25,71 @@
           </component>
         </children>
       </scrollpane>
+      <tabbedpane id="a10e3">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="50"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <grid id="cd6ee" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Entity Config"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="a05ee" class="javax.swing.JButton" binding="ecBrowseButton">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Durchsuchen..."/>
+                </properties>
+              </component>
+              <component id="9ec8c" class="javax.swing.JLabel" binding="ecCurrentFileLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="329" height="16"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="keine Datei ausgewählt"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="3442e" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Entity Location"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="95a7e" class="javax.swing.JButton" binding="elBrowseButton">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Durchsuchen..."/>
+                </properties>
+              </component>
+              <component id="64eff" class="javax.swing.JLabel" binding="elCurrentFileLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="keine Datei ausgewählt"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+        </children>
+      </tabbedpane>
     </children>
   </grid>
 </form>
