--- a/src/main/java/me/eva/buidmgui/gui/MainPage.form
+++ b/src/main/java/me/eva/buidmgui/gui/MainPage.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <splitpane id="4498c">
+      <splitpane id="4498c" binding="rootSplitPane">
         <constraints>
           <grid row="0" column="0" row-span="2" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
@@ -196,7 +196,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="6586d" class="javax.swing.JTextPane" binding="consoleTextPane">
+              <component id="6586d" class="javax.swing.JTextPane" binding="consoleTextPane" custom-create="true">
                 <constraints/>
                 <properties>
                   <editable value="false"/>
